--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server.js",
+    "client": "npm start --prefix frontend",
     "server": "nodemon backend/server.js"
   },
   "repository": {
