--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
   },
   "homepage": "https://github.com/Advanced-Computer-Lab-2022/KIMOS#readme",
   "dependencies": {
+    "axios": "^1.1.3",
+    "body-parser": "^1.20.1",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongoose": "^6.6.5",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react-file-base64": "^1.0.3",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   }
 }
