--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "homepage": "https://github.com/Advanced-Computer-Lab-2022/KIMOS#readme",
   "dependencies": {
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.6.5",
+    "mongoose": "^6.6.7",
     "nodemon": "^2.0.20"
   }
 }
