--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
+    "exchange-rates-api": "^1.1.0",
     "express": "^4.18.2",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20"
