--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
   },
   "homepage": "https://github.com/Advanced-Computer-Lab-2022/KIMOS#readme",
   "dependencies": {
-    "axios": "^1.1.3",
-    "body-parser": "^1.20.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.10",
+    "axios": "^1.1.3",
+    "body-parser": "^1.20.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "country-iso-2-to-3": "^1.1.0",
+    "currency-converter-lt": "^1.3.1",
     "dotenv": "^16.0.3",
     "exchange-rates-api": "^1.1.0",
     "express": "^4.18.2",
+    "iso-country-currency": "^0.6.0",
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
