--- a/package.json
+++ b/package.json
@@ -20,29 +20,28 @@
   },
   "homepage": "https://github.com/Advanced-Computer-Lab-2022/KIMOS#readme",
   "dependencies": {
-<<<<<<< HEAD
-    "axios": "^1.1.3",
-    "body-parser": "^1.20.1",
-=======
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.10",
->>>>>>> 1stMerge
+    "axios": "^1.1.3",
+    "body-parser": "^1.20.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "country-iso-2-to-3": "^1.1.0",
+    "currency-converter-lt": "^1.3.1",
+    "country-to-currency": "^1.0.6",
+    "currency-converter-lt": "^2.0.0-beta.0",
     "dotenv": "^16.0.3",
     "exchange-rates-api": "^1.1.0",
     "express": "^4.18.2",
-<<<<<<< HEAD
+    "iso-country-currency": "^0.6.0",
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
+    "node-schedule": "^2.1.0",
     "nodemon": "^2.0.20",
     "react-file-base64": "^1.0.3",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
-=======
-    "mongoose": "^6.6.7",
-    "nodemon": "^2.0.20"
->>>>>>> 1stMerge
+    "redux-thunk": "^2.4.1",
+    "nodemailer": "^6.8.0"
   }
 }
