--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "country-iso-2-to-3": "^1.1.0",
+    "currency-converter-lt": "^1.3.1",
     "country-to-currency": "^1.0.6",
     "currency-converter-lt": "^2.0.0-beta.0",
     "dotenv": "^16.0.3",
@@ -37,7 +38,6 @@
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
     "node-schedule": "^2.1.0",
-    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "react-file-base64": "^1.0.3",
     "redux": "^4.2.0",
