--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,53 +1,46 @@
 {
-  "name": "reactproj",
-  "version": "0.1.0",
-  "private": true,
+  "name": "kimos",
+  "version": "1.0.0",
+  "description": "Courses App For GUC",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node backend/server.js",
+    "client": "npm start --prefix frontend",
+    "server": "nodemon backend/server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Advanced-Computer-Lab-2022/KIMOS.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Advanced-Computer-Lab-2022/KIMOS/issues"
+  },
+  "homepage": "https://github.com/Advanced-Computer-Lab-2022/KIMOS#readme",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
-    "@mui/x-data-grid": "^5.17.9",
-    "@mui/x-date-pickers-pro": "^5.0.8",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
-    "dayjs": "^1.11.6",
-    "react": "^18.2.0",
-    "react-color-palette": "^6.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
-    "recharts": "^2.1.16",
+    "body-parser": "^1.20.1",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "country-iso-2-to-3": "^1.1.0",
+    "currency-converter-lt": "^2.0.0-beta.0",
+    "country-to-currency": "^1.0.6",
+    "dotenv": "^16.0.3",
+    "exchange-rates-api": "^1.1.0",
+    "express": "^4.18.2",
+    "iso-country-currency": "^0.6.0",
+    "moment": "^2.29.4",
+    "mongoose": "^6.6.5",
+    "node-schedule": "^2.1.0",
+    "nodemon": "^2.0.20",
+    "react-file-base64": "^1.0.3",
     "redux": "^4.2.0",
-    "redux-persist": "^6.0.0",
-    "sass": "^1.55.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "redux-thunk": "^2.4.1",
+    "nodemailer": "^6.8.0"
   }
 }
