--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "react-file-base64": "^1.0.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0"
   }
 }
