--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "country-iso-2-to-3": "^1.1.0",
     "country-to-currency": "^1.0.6",
