--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "pdfkit": "^0.13.0",
     "react-file-base64": "^1.0.3",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "stripe": "^11.5.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0"
