--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "iso-country-currency": "^0.6.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^3.1.1",
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
     "node-schedule": "^2.1.0",
@@ -49,7 +50,8 @@
     "pdfkit": "^0.13.0",
     "react-file-base64": "^1.0.3",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "stripe": "^11.5.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0"
