--- a/frontend/reactproj/package.json
+++ b/frontend/reactproj/package.json
@@ -19,7 +19,9 @@
     "react": "^18.2.0",
     "react-color-palette": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-markdown": "^8.0.4",
+    "react-modal-resizable-draggable": "^0.1.6",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
