--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "luxon": "^3.1.1",
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
+    "node-fetch": "^3.3.0",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
@@ -51,7 +52,8 @@
     "react-file-base64": "^1.0.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "stripe": "^11.5.0"
+    "stripe": "^11.5.0",
+    "youtube-info": "^1.3.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0"
