--- a/frontend/reactproj/package.json
+++ b/frontend/reactproj/package.json
@@ -22,10 +22,12 @@
     "react-draggable": "^4.4.5",
     "react-markdown": "^8.0.4",
     "react-modal-resizable-draggable": "^0.1.6",
+    "react-player": "^2.11.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.10",
+    "react-youtube": "^10.1.0",
     "recharts": "^2.1.16",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
